# pico-i2c-1602-lcd

./: .gitignore  CMakeLists.txt  README.md  main.c
examples/: BasicTextExample.c  MenuAndScreenExample.c
examples/menus/: MainMenu.c
examples/screens/: TestScreen.h
i2c/: i2c.c  i2c.h
lcd-library/: menu-manager.c  menu-manager.h  pico-lcd.c  pico-lcd.h  screen-manager.c  screen-manager.h  scroll-menu.c  scroll-menu.h
menus/: MainMenu.c  MainMenu.h  SubMenu.c  Submenu.h
screens/: TestScreen.c
